--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,12 @@
     <div class="container">
         <div class="block">
             <h1 class="block__title">Генератор ссылок WhatsApp</h1>
-            <div class="block__text">Введите номер телефона</div>
-            <div class="number"><input type="tel" class="number__form numberArea" pattern="7-[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" maxlength="11"></div>
-            <div class="button"><button class="button__form sendButton">Получить ссылку</button></div>
-            <div class="link-wrapper"><a href="" class="link__form textOut" target="_blank"></a><span class="errorMessage"></span></div>
+            <div class="number"><input type="text" class="numberArea number__form " placeholder="Введите номер телефона" maxlength="13"></div>
+            <div class="button"><button class="sendButton button__form">Получить ссылку</button></div>
+            <div class="link"><a href="" class="textOut link__form" target="_blank"></a><span class="errorMessage"></span></div>
+
+
+            
         </div>
     </div>
     <script src="js/script.js"></script>
