--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="block">
             <h1 class="block__title">Генератор ссылок WhatsApp</h1>
-            <div class="number"><input type="text" class="numberArea number__form " placeholder="Введите номер телефона" maxlength="20"></div>
+            <div class="number"><input type="text" class="numberArea number__form " placeholder="Введите номер телефона"></div>
             <div class="button"><button class="sendButton button__form">Получить ссылку</button></div>
             <div class="link"><a href="" class="textOut link__form" target="_blank"></a><span class="errorMessage"></span></div>
 
